Added input styling and events

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <h1 class="thin">Comparison</h1>
             </div>
             <div class="single-row">
-                <h2 class="thin tooltip"><input type="text" name="competePrice" id="competePrice" placeholder="900000" >
+                <h2 class="thin tooltip"><input type="text" name="competePrice" id="competePrice" placeholder="900000"  class="numberOnly">
                     <div class="top" id="remindUser">
                             <h3>Please complete all the input fields for a comparison</h3>
                             <h3>Only use numbers!</h3>
@@ -90,19 +90,19 @@
                     </div>(ZAR)</h2>
             </div>
             <div class="double-row">
-                <h2 class="thin"><input type="text" name="competeOutput" id="competeOutput" placeholder="60">kW</h2>
+                <h2 class="thin"><input type="text" name="competeOutput" id="competeOutput" placeholder="60" class="numberOnly">kW</h2>
             </div>
             <div class="double-row">
-                <h2 class="thin"><input type="text" name="competeEnergy" id="competeEnergy" placeholder="100">kWh</h2>
+                <h2 class="thin"><input type="text" name="competeEnergy" id="competeEnergy" placeholder="100" class="numberOnly">kWh</h2>
             </div>
             <div class="single-row">
-                <h2 class="thin"><input type="text" name="competeCycles" id="competeCycles" placeholder="5000"></h2>
+                <h2 class="thin"><input type="text" name="competeCycles" id="competeCycles" placeholder="5000" class="numberOnly"></h2>
             </div>
             <div class="single-row">
-                <h2 class="thin"><input type="text" name="commpeteEfficiency" id="competeEfficiency" placeholder="87">%</h2>
+                <h2 class="thin"><input type="text" name="commpeteEfficiency" id="competeEfficiency" placeholder="87" class="numberOnly">%</h2>
             </div>
             <div class="single-row">
-                <h2 class="thin"><input type="text" name="competeDOD" id="competeDOD" placeholder="80">%</h2>
+                <h2 class="thin"><input type="text" name="competeDOD" id="competeDOD" placeholder="80" class="numberOnly">%</h2>
             </div>
             <div class="single-row">
                 <h1 id="solarmd-competitor-costing" class="thin" >R<span id="solarmd-competitor-cost-value"></span>/kWh</h1>
