Added input styling and events

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div class="single-row">
                 <h2 class="thin tooltip"><input type="text" name="competePrice" id="competePrice" placeholder="900000"  class="numberOnly">
                     <div class="top" id="remindUser">
-                            <h3>Please complete all the input fields for a comparison</h3>
+                            <h3>Please complete all the input fields for an accurate comparison</h3>
                             <h3>Only use numbers!</h3>
                             <i></i>
                     </div>(ZAR)</h2>
