added mms option

--- a/index.html
+++ b/index.html
@@ -196,6 +196,17 @@
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est ipsam expedita in accusantium velit praesentium sit nesciunt debitis aperiam, error nihil tempora temporibus commodi alias dolore dolorum vel vitae.
                         </p>
                     </div>
+                    <div id="mss">
+                        <p>
+                            <label class="container">
+                                <img class="sellect-icon" id="hybrid-system-icon" src="./img/MSS.png" alt="mss-cabinet">
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est ipsam expedita in accusantium velit praesentium sit nesciunt debitis aperiam, error nihil tempora temporibus commodi alias dolore dolorum vel vitae.
+                                <input type="radio" name="battery-model" id="mss-model">
+                                <span class="checkmark"></span>                                                              
+                            </label>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est ipsam expedita in accusantium velit praesentium sit nesciunt debitis aperiam, error nihil tempora temporibus commodi alias dolore dolorum vel vitae.
+                        </p>
+                    </div>
                 </div>
 
 
