added compile-info-form.js to build user request info.

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     <div id="ss4037">
                             <p>
                             <label class="container"><img class="sellect-icon" id="self-consumption-icon" src="./img/SS4037-225x300.png" alt="ss4037">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                                    <input type="radio" name="battery-model" id="ss4037-model">                         
+                                    <input type="radio" name="battery-model" id="ss4037-model" onclick="batteryModelSelect()">                         
                                     <span class="checkmark"></span>
                             </label>
                             
@@ -179,7 +179,7 @@
                             <label class="container">
                                 <img class="sellect-icon" id="peak-load-icon" src="./img/SS4074_Solar-MD-Residential2-300x286.png" alt="ss4074">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est ipsam expedita in accusantium velit praesentium sit nesciunt debitis aperiam, error nihil tempora temporibus commodi alias dolore dolorum vel vitae.
-                                <input type="radio" name="battery-model" id="ss4074-model">
+                                <input type="radio" name="battery-model" id="ss4074-model" onclick="batteryModelSelect()">
                                 <span class="checkmark"></span>                                                              
                             </label>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est ipsam expedita in accusantium velit praesentium sit nesciunt debitis aperiam, error nihil tempora temporibus commodi alias dolore dolorum vel vitae.
@@ -190,7 +190,7 @@
                             <label class="container">
                                 <img class="sellect-icon" id="hybrid-system-icon" src="./img/CB12-cabinet.png" alt="CB12-cabinet">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est ipsam expedita in accusantium velit praesentium sit nesciunt debitis aperiam, error nihil tempora temporibus commodi alias dolore dolorum vel vitae.
-                                <input type="radio" name="battery-model" id="ss202-model">
+                                <input type="radio" name="battery-model" id="ss202-model" onclick="batteryModelSelect()">
                                 <span class="checkmark"></span>                                                              
                             </label>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est ipsam expedita in accusantium velit praesentium sit nesciunt debitis aperiam, error nihil tempora temporibus commodi alias dolore dolorum vel vitae.
@@ -201,7 +201,7 @@
                             <label class="container">
                                 <img class="sellect-icon" id="hybrid-system-icon" src="./img/MSS.png" alt="mss-cabinet">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est ipsam expedita in accusantium velit praesentium sit nesciunt debitis aperiam, error nihil tempora temporibus commodi alias dolore dolorum vel vitae.
-                                <input type="radio" name="battery-model" id="mss-model">
+                                <input type="radio" name="battery-model" id="mss-model" onclick="batteryModelSelect()">
                                 <span class="checkmark"></span>                                                              
                             </label>
                             Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam est ipsam expedita in accusantium velit praesentium sit nesciunt debitis aperiam, error nihil tempora temporibus commodi alias dolore dolorum vel vitae.
@@ -242,6 +242,7 @@
 
 <script src="./js/power-cost-calculator.js"></script>
 <script src="./js/modal-form.js"></script>
+<script src="./js/compile-info-form.js"></script>
 
 </body>
 </html>
